--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,15 +4,20 @@ project (GlApp)
 
 add_subdirectory(thirdparty)
 
-include_directories(SYSTEM ${GLFW_SOURCE_DIR}/include
-                    ${GLFW_SOURCE_DIR}/deps)
-
-link_libraries(glfw ${OPENGL_GLU_LIBRARY})
-link_libraries(${GLFW_LIBRARIES})
-
-include_directories(SYSTEM ${glew_SOURCE_DIR}/include)
-link_libraries(${GLEW_LIBRARIES})
-
+include_directories(SYSTEM ${GLFW_SOURCE_DIR}/include ${GLFW_SOURCE_DIR}/deps)
 include_directories(SYSTEM ${GLM_INCLUDES})
+if (WIN32)
+    include_directories(SYSTEM ${GLEW_INCLUDES})
+    include_directories(SYSTEM ${ANGLE_INCLUDES})
+endif ()
 
 add_executable(glapp WIN32 main.cpp)
+
+target_link_libraries(glapp glfw ${OPENGL_GLU_LIBRARY})
+target_link_libraries(glapp ${GLFW_LIBRARIES})
+if (WIN32)
+    target_link_libraries(glapp ${GLEW_LIBRARIES})
+    target_link_libraries(glapp ${ANGLE_LIBRARIES})
+endif ()
+
+INSTALL(TARGETS glapp DESTINATION bin)
