a few modifications/fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,9 +21,10 @@ set(SOURCE
 
 set(SHADERS
 	shaders/2d.vert shaders/2d.frag
-    shaders/post.vert shaders/post.frag)
+    shaders/post.vert shaders/post.frag
+    shaders/prime.vert shaders/prime.frag)
 
-add_executable(glapp WIN32 ${SOURCE} ${SHADERS})
+add_executable(glapp WIN32 CMakeLists.txt ${SOURCE} ${SHADERS})
 
 source_group(Shaders FILES ${SHADERS})
 
