--- a/src/gles2/CMakeLists.txt
+++ b/src/gles2/CMakeLists.txt
@@ -2,14 +2,19 @@ set(SOURCE
   gles2.cpp ${PROJECT_SOURCE_DIR}/include/glpp/gles2.h
   commands.cpp
   extensions.cpp
-  angle_ext.cpp
-  angle_extension_macros.h
   ${PROJECT_SOURCE_DIR}/include/glpp/gles2/commands.h
   ${PROJECT_SOURCE_DIR}/include/glpp/gles2/extensions.h
   ${PROJECT_SOURCE_DIR}/include/glpp/gles2/extensions_enums.h
   ${PROJECT_SOURCE_DIR}/include/glpp/gles2/enums.h
   ${PROJECT_SOURCE_DIR}/include/glpp/angle_ext.h
   ${PROJECT_SOURCE_DIR}/include/glpp/types.h)
+
+if (WIN32)
+  set(SOURCE ${SOURCE}
+    angle_ext.cpp
+    angle_extension_macros.h
+  )
+endif ()
 
 add_library(gles2 ${SOURCE})
 
