--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,17 @@ add_definitions(-DGL_GLEXT_PROTOTYPES)
 if (WIN32)
     add_definitions(-DGLPP_USING_ANGLE)
     add_definitions(-DGLPP_USING_GLES2)
+else ()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -stdlib=libc++")
 endif ()
 
 add_subdirectory(thirdparty)
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
-if (APPLE)
-   add_subdirectory(src/gl2)
-else ()
+if (WIN32)
    add_subdirectory(src/gles2)
+else ()
+   add_subdirectory(src/gl2)
 endif ()
 
 add_subdirectory(src/glpp)
